<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:id="@+id/add_menu_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/amatic_bold"
            android:text="Add Menu Item"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/amatic"
            android:text="Item Name"
            android:textSize="22dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/item_name_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="85dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
            android:scrollbarSize="4dp"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/caffeine_small_intake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/amatic"
            android:text="Caffeine for Small"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/caffeine_small_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="135dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
            android:scrollbarSize="4dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/caffeine_medium_intake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/amatic"
            android:text="Caffeine for Medium"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/caffeine_medium_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="185dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
            android:scrollbarSize="4dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/caffeine_large_intake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="250dp"
            android:fontFamily="@font/amatic"
            android:text="Caffeine for Large"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/caffeine_large_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="235dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
            android:scrollbarSize="4dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/amatic"
            android:text="Price for Small"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/price_small_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="285dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
            android:scrollbarSize="4dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="350dp"
            android:fontFamily="@font/amatic"
            android:text="Price for Medium"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/price_medium_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="335dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
            android:scrollbarSize="4dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="400dp"
            android:fontFamily="@font/amatic"
            android:text="Price for Large"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/price_large_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="385dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
            android:scrollbarSize="4dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calories_for_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="450dp"
            android:fontFamily="@font/amatic"
            android:text="Calories for Small"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/calories_for_small_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="435dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
            android:scrollbarSize="4dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calories_for_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="500dp"
            android:fontFamily="@font/amatic"
            android:text="Calories for Medium"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/calories_for_medium_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="485dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
            android:scrollbarSize="4dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calories_for_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="550dp"
            android:fontFamily="@font/amatic"
            android:text="Calories for Large"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/calories_for_large_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="535dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
            android:scrollbarSize="4dp"
            android:singleLine="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_item"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="615dp"
            android:background="@drawable/green_round_button"
            android:enabled="true"
            android:fontFamily="@font/amatic_regular"
            android:text="Add Menu Item"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />


    </RelativeLayout>
</ScrollView>